--- a/gleam.toml
+++ b/gleam.toml
@@ -21,6 +21,11 @@ logging = ">= 1.3.0 and < 2.0.0"
 gleam_http = ">= 4.2.0 and < 5.0.0"
 dot_env = ">= 1.2.0 and < 2.0.0"
 pog = ">= 4.1.0 and < 5.0.0"
+pgo = ">= 0.15.0 and < 1.0.0"
+glanoid = ">= 1.0.1 and < 2.0.0"
+gleam_time = ">= 1.4.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
+cigogne = ">= 4.0.2 and < 5.0.0"
+squirrel = ">= 4.4.1 and < 5.0.0"
