--- a/gleam.toml
+++ b/gleam.toml
@@ -24,6 +24,8 @@ pog = ">= 4.1.0 and < 5.0.0"
 pgo = ">= 0.15.0 and < 1.0.0"
 glanoid = ">= 1.0.1 and < 2.0.0"
 gleam_time = ">= 1.4.0 and < 2.0.0"
+wisp = ">= 2.0.0 and < 3.0.0"
+gleam_json = ">= 3.0.2 and < 4.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
