Add gleam_crypto dependency in gleam.toml and manifest.toml. Remove obsolete SQL migration files for locks and one-off jobs, and update joblot instance and lock handling to improve job management and state processing.

--- a/gleam.toml
+++ b/gleam.toml
@@ -26,6 +26,7 @@ glanoid = ">= 1.0.1 and < 2.0.0"
 gleam_time = ">= 1.4.0 and < 2.0.0"
 wisp = ">= 2.0.0 and < 3.0.0"
 gleam_json = ">= 3.0.2 and < 4.0.0"
+gleam_crypto = ">= 1.5.1 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
