--- a/gleam.toml
+++ b/gleam.toml
@@ -27,6 +27,7 @@ gleam_time = ">= 1.4.0 and < 2.0.0"
 wisp = ">= 2.0.0 and < 3.0.0"
 gleam_json = ">= 3.0.2 and < 4.0.0"
 gleam_crypto = ">= 1.5.1 and < 2.0.0"
+clockwork = ">= 4.0.0 and < 5.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
