--- a/gleam.toml
+++ b/gleam.toml
@@ -28,6 +28,7 @@ wisp = ">= 2.0.0 and < 3.0.0"
 gleam_json = ">= 3.0.2 and < 4.0.0"
 gleam_crypto = ">= 1.5.1 and < 2.0.0"
 clockwork = ">= 4.0.0 and < 5.0.0"
+gleam_httpc = ">= 5.0.0 and < 6.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
