--- a/gleam.toml
+++ b/gleam.toml
@@ -31,6 +31,7 @@ clockwork = ">= 4.0.0 and < 5.0.0"
 gleam_httpc = ">= 5.0.0 and < 6.0.0"
 glisten = ">= 8.0.1 and < 9.0.0"
 mug = ">= 3.1.0 and < 4.0.0"
+httpp = ">= 1.3.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
