--- a/fly.toml
+++ b/fly.toml
@@ -5,6 +5,7 @@
 
 app = 'joblot'
 primary_region = 'fra'
+swap_size_mb = 512
 
 [env]
 
@@ -17,6 +18,6 @@ primary_region = 'fra'
   processes = ['app']
 
 [[vm]]
-  memory = '512mb'
+  memory = '256mb'
   cpu_kind = 'shared'
   cpus = 1
