--- a/fly.toml
+++ b/fly.toml
@@ -28,3 +28,8 @@ swap_size_mb = 512
   memory = '256mb'
   cpu_kind = 'shared'
   cpus = 1
+
+[mounts]
+  source = "joblot_data"
+  destination = "/data"
+  initial_size = "1gb"
