--- a/gleam.toml
+++ b/gleam.toml
@@ -34,6 +34,7 @@ httpp = ">= 1.7.2 and < 2.0.0"
 filepath = ">= 1.1.2 and < 2.0.0"
 simplifile = ">= 2.3.0 and < 3.0.0"
 file_streams = ">= 1.7.0 and < 2.0.0"
+sqlight = ">= 1.0.3 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
